# jubilant

./: .copilot-collections.yaml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: .copilot-collections.yaml  .sbomber-manifest-sdist.yaml  .sbomber-manifest-wheel.yaml  zizmor.yml
.github/agents/: doc-reviewer.agent.md  doc-style-guide.md  go-reviewer.agent.md  test-agent.md
.github/instructions/: documentation-rtd.instructions.md  python-library.instructions.md
.github/instructions/agents/: doc-agent.md  lint-agent.md
.github/workflows/: ci.yaml  copilot-collections-update.yml  docs.yaml  publish.yaml  secscan.yaml  tests-unit.yaml  tiobe.yaml
docs/: .custom_wordlist.txt  conf.py  index.md  index.rst  requirements.txt
docs/.sphinx/: spellingcheck.yaml
docs/explanation/: index.md  security.md
docs/how-to/: index.md  migrate-from-pytest-operator.md
docs/reference/: index.md  jubilant.rst  modeltypes.rst  secrettypes.rst
docs/tutorial/: getting-started.md
jubilant/: __init__.py  _actions.py  _all_any.py  _errors.py  _helpers.py  _juju.py  _pretty.py  _task.py  _test_helpers.py  _types.py  _version.py  _yaml.py  modeltypes.py  secrettypes.py  spacetypes.py  statustypes.py
jute/: __init__.py  _types.py
test/integration/: conftest.py  test_basic.py
test/unit/: conftest.py  fake_statuses.py  mocks.py  test_add_model.py  test_add_unit.py  test_all_any.py  test_basic.py  test_cli.py  test_debug_log.py  test_deploy.py  test_destroy_model.py  test_integrate.py  test_juju_class.py  test_remove_unit.py  test_run.py  test_status.py  test_switch.py  test_wait.py
tests/integration/: conftest.py  helpers.py  test_basic.py  test_config.py  test_credentials.py  test_cross_model.py  test_deployment.py  test_execution.py  test_machine.py  test_model.py  test_relations.py  test_secrets.py  test_spaces.py
tests/integration/charms/testapp/: charmcraft.yaml  pyproject.toml  requirements.txt
tests/integration/charms/testdb/: charmcraft.yaml  pyproject.toml
tests/integration/charms/testdb/src/: charm.py
tests/unit/: conftest.py  fake_modelinfo.py  fake_secrets.py  fake_spaces.py  mocks.py  test_add_credential.py  test_add_model.py  test_add_secret.py  test_add_space.py  test_add_ssh_key.py  test_all_any.py  test_bootstrap.py  test_cli.py  test_config.py  test_consume.py  test_deploy.py  test_destroy_model.py  test_exec.py  test_grant_secret.py  test_juju_class.py  test_model_config.py  test_model_constraints.py  test_move_to_space.py  test_offer.py  test_pretty.py  test_refresh.py  test_reload_spaces.py  test_remove_application.py  test_remove_relation.py  test_remove_secret.py  test_remove_space.py  test_remove_ssh_key.py  test_remove_unit.py  test_rename_space.py  test_run.py  test_scp.py  test_secret_uri.py  test_secrets.py  test_show_model.py  test_show_secret.py  (+10 more)
