[project]
name = "jubilant"
description = "Juju CLI wrapper for charm integration testing"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
authors = [
    {name="The Charm Tech team at Canonical Ltd."},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyYAML==6.*",
]

[project.urls]
Homepage = "https://github.com/canonical/jubilant"
Repository = "https://github.com/canonical/jubilant"
Issues = "https://github.com/canonical/jubilant/issues"
Documentation = "https://canonical-jubilant.readthedocs-hosted.com/"

[dependency-groups]
dev = [
    "ops==2.19.4",  # for static type checking test charms
    "pyright==1.1.398",
    "pytest==8.3.4",
    "pytest-cov==5.0.0",
    "requests>=2.32.3",
    "ruff==0.9.6",
]

[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "jubilant.__version__"}

# Workaround for setuptools bug:
# https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []

# Linting tools configuration
[tool.ruff]
line-length = 99
target-version = "py38"
extend-exclude = ["docs/*"]

# Ruff formatter configuration
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pep8-naming
    "N",
    # flake8-builtins
    "A",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # Ruff specific
    "RUF",
    # Perflint
    "PERF",
    # pyflakes-docstrings
    "D",
]
ignore = [
    # Function argument `x` is shadowing a Python builtin
    "A002",

    # Use of `assert` detected
    "S101",

    # `subprocess` call: check for execution of untrusted input
    "S603",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "min", "map", "range", "type", "input", "format"]

[tool.ruff.lint.per-file-ignores]
"jubilant/statustypes.py" = [
    # Missing docstring in public class
    "D101",
]
"tests/*" = [
    # All documentation linting.
    "D",
    # Use of possibly insecure function (eval)
    "S307",
    # Line too long
    "E501",
]

[tool.pyright]
include = ["jubilant", "tests"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportPrivateUsage = false

[tool.pytest.ini_options]
pythonpath = [
  "."
]
